<resources>
    <string name="app_name">BiTSy</string>
    <string name="title_transactions">Transactions</string>
    <string name="title_merchants">Merchants</string>
    <string name="block_number_bottom_bar">Block: %1$s</string>
    <string name="title_settings">Settings</string>
    <string name="copy">Copy</string>
    <string name="pref_wallet_accounts">wallet_accounts</string>
    <string name="night_mode">Night mode</string>
    <string name="cancel">CANCEL</string>
    <string name="unable_to_send_amount">Unable to send the Amount.</string>
    <string name="send">Send</string>
    <string name="to">to</string>
    <string name="from">from</string>
    <string name="warning_msg_same_account">You can\'t send funds to the same account</string>
    <string name="account_name_not_exist">Account Name %s does not exist</string>
    <string name="account_id">accountId</string>
    <string name="insufficient_amount">Insufficient Amount</string>
    <string name="amount_should_be_greater_than_zero">Amount should be greater than zero</string>
    <string name="send_assets_error_invalid_cypto_coin_selected" translatable="false">Invalid crypto coin selected</string>
    <string name="pref_language">language</string>
    <string name="create_account_window_err_account_empty" translatable="false">Account Name is emtpy</string>
    <string name="account_name_already_exist">Account Name already exist</string>
    <string name="create_account_window_err_at_least_one_script" translatable="false">The Account Name should contain at least one \'-\'</string>
    <string name="create_account_window_err_at_least_one_number" translatable="false">The Account Name should contains at least one number</string>
    <string name="create_account_window_err_at_least_one_character" translatable="false">The Account Name should contains at least one character</string>
    <string name="create_account_window_err_min_account_name_len" translatable="false">The Account Name should contains at least 10 characters length</string>
    <string name="mismatch_pin">mismatch pin</string>
    <string name="create_account_window_err_at_least_pin_characters" translatable="false">The PIN should contains at least 6 digits</string>
    <string name="disagree">Disagree</string>
    <string name="agree">Agree</string>
    <string name="rcv_screen_name">Receive</string>
    <string name="audio_folder_path">Audio Folder Path</string>
    <string name="refresh_keys">REFRESH ACCOUNT KEYS</string>
    <string name="register_new_account">REGISTER NEW ACCOUNT</string>
    <string name="import_new_account">IMPORT ACCOUNT</string>
    <string name="upgrade_account">UPGRADE ACCOUNT</string>
    <string name="remove_account">REMOVE ACCOUNT</string>
    <string name="check_for_updates">Check for updates on startup</string>
    <string name="automatically_install">Automatically install major version</string>
    <string name="require_pin">Require PIN/Pattern to send funds &amp; view memos</string>
    <string name="close_bitshare">Automatically close Smartcoins Wallet after 3 minutes of inactivity</string>
    <string name="always_donate">Always Donate 2 BTS to the Support Developers at BitShares Munich(bitshares munich)</string>
    <string name="hide_donations">Hide Donations from homescreen Transactions list</string>
    <string name="backup">BACKUP .bin</string>
    <string name="backup_brainkey">BACKUP BRAINKEY</string>
    <string name="secure_pin">EDIT PIN</string>
    <string name="large_text">
    </string>
    <string name="import_gravatar">Import Gravatar</string>
    <string name="bugs_or_errors">Bugs or Errors?</string>
    <string name="bugs_or_ideas">Bugs or Ideas?</string>
    <string name="please_let_us_know">Please let us know:</string>
    <string name="Telegram_chat">Telegram chat:</string>
    <string name="Email">Email:</string>
    <string name="Open_Source">Open Source:</string>
    <string name="url_telegram" translatable="false">https://t.me/Agorise</string>
    <string name="url_email" translatable="false">agorise@protonmail.ch</string>
    <string name="url_open_source" translatable="false">https://github.com/Agorise </string>
    <string name="loading">Loading...</string>
    <string name="send_screen_name">Send</string>
    <string name="taxable_country">Taxable Country</string>
    <string name="preferred_lang">Preferred Language</string>
    <string name="date_time">Display Dates and Times as</string>
    <string name="imported_created_accounts">Created Account</string>
    <string name="qr_code_activity_name">Scan QR</string>
    <string name="pay_to">Pay to</string>
    <string name="ok">OK</string>
    <string name="price">price</string>
    <string name="currency">currency</string>
    <string name="please_enter_valid_amount">Please enter valid amount</string>
    <string name="please_pay">Please pay</string>
    <string name="share_qr_code">Share QR Code</string>
    <string name="folder_name">SmartcoinsWallet</string>
    <string name="beta">""</string>
    <string name="requested">requested</string>
    <string name="next">NEXT</string>
    <string name="from_capital">From</string>
    <string name="to_capital">To</string>
    <string name="amount">Amount</string>
    <string name="loyalty_points">Loyalty Points</string>
    <string name="backup_asset">Backup Asset</string>
    <string name="memo_capital">Memo</string>
    <string name="txt_6_digits_pin_confirm">PIN confirm</string>
    <string name="create">CREATE</string>
    <string name="or">OR</string>
    <string name="txt_brain_key_info">Print this out, or write it down. Anyone with access to your recovery key will have access to funds within this wallet.</string>
    <string name="close">CLOSE</string>
    <string name="create_wallet">CREATE WALLET</string>
    <string name="txt_brain_key">Brainkey</string>
    <string name="window_seed_copy">Copy</string>
    <string name="ERROR_UNRECOGNIZABLE">An error ocurred attempting to import the account</string>
    <string name="NO_ACCOUNT_DATA">The account does not have any data</string>
    <string name="BAD_SEED">The seed is not valid</string>
    <string name="ACCOUNT_DOESNT_EXIST">The account does not exists</string>
    <string name="permission_denied_map">Permission Denied. You cannot use this map. Please allow this permission in App Settings.</string>
    <string name="question_continue">¿Are you sure to continue?</string>
    <string name="window_seed_toast_clipboard">Brainkey copied to clipboard!</string>
    <string name="pin_number_warning">The pin number must be at least 6 digits</string>
    <string name="NO_SERVER_CONNECTION">There was an error with the connection. Try again later</string>
    <string name="Account_already_exists">Account already exists</string>
    <string name="existing_account">Existing Account</string>
    <string name="import_brainkey">Import from BrainKey</string>
    <string name="continue_question">Are you sure to continue?</string>
    <string name="window_create_seed_DialogMessage">Creating New Account ...</string>
    <string name="window_seed_backup">Backup brainkey</string>
    <string name="window_seed_leyend_backup">IMPORTANT: Print this out, or write it down. Anyone with access to your recovery key will have access to funds within this wallet</string>
    <string name="checkbox_donate">Donate 2 BTS to the Support Developers at</string>
    <string name="send_capital">Send</string>
    <string name="v_1_0_beta" translatable="false">v 1.0 beta</string>
    <string name="block_number" translatable="false">block# -------</string>
    <string name="no_amount_requested">No amount requested</string>
    <string name="request_amount_screen_name">Amount</string>
    <string name="account_create_register_or_import">ACCOUNT CREATE/REGISTER OR IMPORT</string>
    <string name="txt_account_name">Account Name</string>
    <string name="txt_6_digits_pin">PIN (6+ digits)</string>
</resources>