<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="de.bitshares_munich.smartcoinswallet.SettingActivity"
        tools:showIn="@layout/activity_setting">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Switch
                    android:id="@+id/switchNightMode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/night_mode"
                    android:textAppearance="@style/TextAppearance.Body1"
                    android:textColor="?android:textColorPrimary"/>

            <LinearLayout
                android:id="@+id/l3"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/switchNightMode"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:elevation="5dp"
                android:orientation="vertical"
                android:weightSum="4">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2.5"
                    android:paddingLeft="10dp"
                    android:text="@string/preferred_lang"
                    android:textSize="13sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:background="@drawable/edittext_background_layer">

                    <Spinner
                        android:id="@+id/spLanguage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="2"
                        android:textColor="#002"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/l41"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_below="@+id/l3"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:elevation="5dp"
                android:orientation="vertical"
                android:weightSum="4">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:paddingLeft="10dp"
                    android:text="@string/imported_created_accounts"
                    android:textSize="13sp" />

                <TextView
                        android:id="@+id/txtAccount"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="2"
                        android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/button_rows"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/l41"
                android:layout_marginTop="30dp"

                android:elevation="5dp"
                android:orientation="vertical"
                android:padding="5dp">

                <Button
                    android:id="@+id/remove_account"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:layout_weight="0.5"
                    android:background="@drawable/button_border"
                    android:stateListAnimator="@animator/my_animated_button"
                    android:text="@string/remove_account"
                    android:textColor="@drawable/btn_txt"
                    android:textStyle="normal" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/l5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/button_rows"
                android:layout_marginTop="30dp"

                android:elevation="5dp"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/close_bitshare"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/close_bitshare" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/l6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/l5"
                android:layout_marginTop="30dp"

                android:elevation="5dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:weightSum="2">

                    <ImageView
                        android:id="@+id/brainkey_ic"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"

                        android:onClick="onClickBackupBrainkeybtn"
                        android:src="@drawable/brainkey_ic" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:onClick="onClickBackupBrainkeybtn"
                        android:text="@string/backup_brainkey" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/tvEmptyl6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/l6"
                android:layout_marginTop="30dp"
                android:text="@string/large_text"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tvEmpty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvEmptyl6"
                android:layout_marginTop="10dp"
                android:text="@string/large_text"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/llBugs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvEmpty"
                android:layout_marginTop="10dp"

                android:elevation="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/bugs_or_ideas" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/Telegram_chat" />

                    <TextView
                        android:id="@+id/tvTelegramUrl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:autoLink="web"
                        android:text="@string/url_telegram"
                        android:textColorLink="#0000EE"
                        android:textSize="13dp" />

                </LinearLayout>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="5dp"
                            android:text="@string/Email" />

                    <TextView
                            android:id="@+id/tvEmailUrl"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="5dp"
                            android:autoLink="web"
                            android:text="@string/url_email"
                            android:textColorLink="#0000EE"
                            android:textSize="13dp" />

                </LinearLayout>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="5dp"
                            android:text="@string/Open_Source" />

                    <TextView
                            android:id="@+id/tvOpenUrl"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="5dp"
                            android:autoLink="web"
                            android:text="@string/url_open_source"
                            android:textColorLink="#0000EE"
                            android:textSize="13dp" />

                </LinearLayout>

                <Space
                        android:layout_width="match_parent"
                        android:layout_height="10dp" />

            </LinearLayout>


        </RelativeLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:paddingLeft="0dp"
        android:paddingRight="0dp">

        <TextView
                android:text="@string/v_1_0_beta"
                android:id="@+id/tvAppVersion_rcv_screen_activity"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"/>

        <TextView
                android:layout_width="0dp"
                android:id="@+id/tvBlockNumberHead_rcv_screen_activity"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:textColor="?android:textColorPrimary"
                android:text="@string/block_number"/>

        <ImageView
                android:id="@+id/ivSocketConnected_rcv_screen_activity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_gravity="center"/>

    </LinearLayout>


</LinearLayout>

