<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:weightSum="1">

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="3">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:visibility="gone">
            <Button
                android:id="@+id/backbutton"
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:layout_gravity="center"
                android:background="@drawable/righticon"
                android:textColor="?android:textColorPrimary"
            />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/logoicon"
            />
        </LinearLayout>
        <ImageView
            android:id="@+id/qrimage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="2.7"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            >


            <TextView
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="30sp"
                android:layout_marginTop="10sp"
                android:gravity="center"
                android:textSize="20sp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="?android:textColorPrimary"
            />

            <TextView
                android:id="@+id/notfound"
                android:layout_width="match_parent"
                android:layout_height="60sp"
                android:layout_marginTop="18sp"
                android:gravity="center"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/no_amount_requested"
                android:textSize="20sp"
                android:textColor="?android:textColorPrimary"
            />

            <TextView
                android:id="@+id/blankline"
                android:layout_width="match_parent"
                android:layout_height="1sp"
                android:layout_marginTop="80sp"
                android:textColor="?android:textColorPrimary"
            />
            <ImageView
                android:id="@+id/ivGotoKeypad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/blankline"
                android:layout_marginTop="20sp"
                android:src="@drawable/change_icon"
            />
            <ImageView
                android:id="@+id/sharebtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/blankline"
                android:layout_marginTop="20sp"
                android:src="@drawable/share_icon"
            />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:gravity="bottom"
        android:orientation="horizontal">
        <TextView
            android:text="@string/v_1_0_beta"
            android:id="@+id/tvAppVersion_rcv_screen_activity"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"/>

        <TextView
            android:layout_width="0dp"
            android:id="@+id/tvBlockNumberHead_rcv_screen_activity"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:textColor="?android:textColorPrimary"
            android:text="@string/block_number"/>

        <ImageView
            android:id="@+id/ivSocketConnected_rcv_screen_activity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_gravity="center"/>

    </LinearLayout>

</LinearLayout>